Added margin bottom to last label and changed form paddings

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                      <span class="invalid-text">Looks like this is not an email</span>
                   </label>
 
-                  <label class="form-label">
+                  <label class="form-label form-label-last">
                      <input class="form-input" type="password" name="userpassword" placeholder="Password" aria-label="Enter your password" minlength="8" required>
                      <span class="invalid-text">Password cannot be empty</span>
                   </label>
